--- a/mentor_link/app_mentorlink/templates/home_nonconnecte.html
+++ b/mentor_link/app_mentorlink/templates/home_nonconnecte.html
@@ -130,6 +130,30 @@
         .description {
             margin-top: 1em;
         }
+        .btn-label {
+            display: inline-flex;
+            align-items: center;
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            margin: 5px;
+        }
+
+        .btn-radio {
+            appearance: none; /* Cache l'input radio natif */
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 2px solid black;
+            background-color: white;
+            display: inline-block;
+            margin-right: 5px;
+            cursor: pointer;
+        }
+
+        .btn-radio:checked {
+            background-color: black; /* Change la couleur quand sélectionné */
+        }
 
         .message-list {
             display: flex;
@@ -168,20 +192,17 @@
             <span style="color:darkblue;">Mentor</span><span style="color:lightblue;">link</span>
         </a>
         <nav>
-            <a href="{% url 'depose_annonce' %}" style="text-decoration: none; color: inherit;">
-                    Déposer une annonce
-            </a>
                 
             <!-- Barre de recherche avec déclenchement sur input (keyup) et après 500ms de pause -->
             <input type="search" name="q" placeholder="Rechercher" 
        hx-get="{% url 'search' %}" hx-trigger="keyup changed delay:500ms" 
        hx-include="[name=q]" hx-target="#main-content" hx-swap="innerHTML" />
         
-            <a href="{% url 'messages' %}" style="text-decoration: none; color: inherit;">
-                Messages
+            <a href="{% url 'login' %}" style="text-decoration: none; color: inherit;">
+                log in
             </a>
-            <a href="{% url 'profil' %}" style="text-decoration: none; color: inherit;">
-                Profil
+            <a href="{% url 'signup' %}" style="text-decoration: none; color: inherit;">
+                sign up
             </a>
             
         </nav>
@@ -189,6 +210,25 @@
     
     <main id="main-content">
         {% block content %}
+            <h2>Liste des annonces :</h2>
+    <div class="annonce-list">
+        <ul>
+            {% for annonce in annonces %}
+            <li>
+                <img src="img-user1.jpg" alt="Photo">
+                <div>
+                    <strong>{{ annonce.metier }}</strong><br>
+                    {{ annonce.prix }} € / heure<br>
+                    {{ annonce.adresse }}<br>
+                    Annonce de :{{ annonce.id_personnes.nom }} {{ annonce.id_personnes.prenom }}<br>
+                </div>
+            </li>
+                <hr>
+            {% empty %}
+                <li>Aucune annonce trouvée.</li>
+            {% endfor %}
+        </ul>
+    </div>
         {% endblock %}
     </main>
     
