--- a/mentor_link/app_mentorlink/templates/login.html
+++ b/mentor_link/app_mentorlink/templates/login.html
@@ -4,23 +4,14 @@
 
 {% block content %}
 
-<h2>Log in</h2>
-<form
-  hx-post="{% url 'login' %}"
-  hx-target="#htmx-content"
-  hx-swap="innerHTML"
-  method="POST"
->
-  {% csrf_token %}
-  <div>
-    <label for="id_email">Adresse email</label>
-    <input type="text" name="email" id="id_email" required>
-  </div>
-  <div>
-    <label for="id_password">Mot de passe</label>
-    <input type="password" name="password" id="id_password" required>
-  </div>
-  <button type="submit">Se connecter</button>
+<h2>Log In</h2>
+<form method="post">
+    {% csrf_token %}
+    <label for="username">Username:</label>
+    <input type="text" name="username" required>
+    <label for="password">Password:</label>
+    <input type="password" name="password" required>
+    <button type="submit">Log In</button>
 </form>
 
 {% endblock %}
